fix: table body overflow auto

--- a/themes/components/table.less
+++ b/themes/components/table.less
@@ -44,7 +44,7 @@
   }
 
   &-body{
-    // overflow: auto;
+    overflow: auto;
   }
   &-container{
     position: relative;
